# Face-Mask-Detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile-frontend  Dockerfile-prediction  Makefile  README.md  pyproject.toml
notebooks/: face_mask_pred_server.ipynb
src/: app.py  config.py  detect_mask_image.py  face_detect_classify.py  flask_app.py  mask_classifier.py
src/core_functions/: config.py  local_interfaces.py  mask_trainer.py
src/front_end_app/: main.py
src/prediction_server/: DetectFaceClassifyMask.py  model_serving.py
tests/: test_seldon_service.py
