[tool.poetry]
name = "root"
version = "0.0.0"
description=""
authors=["srp-31 <srp@tier.app>"]


[tool.poetry.dependencies]
python = "^3.6"
argparse = "1.1"
imutils = "0.5.3"
keras = "2.3.1"
matplotlib = "3.2.1"
numpy = "1.18.2"
opencv-python = "==4.2.0.*"
pillow = "7.2.0"
scikit-learn = "0.23.1"
scipy = "1.4.1"
streamlit = "0.65.2"
tensorflow = ">=1.15.2"
wheel = "^0.36.2"
seldon-core = "^1.5.1"
Flask = "^1.1.2"
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

